[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/Itens-Academia-.png" type="Texture" id=1]
[ext_resource path="res://Minigame/Minigame_Gym/GymItens.gd" type="Script" id=2]
[ext_resource path="res://img/PlayStation - Tales of Destiny - Piyo Bird.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 84 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.4952, 9.36499 )

[sub_resource type="Animation" id=3]
resource_name = "BirdFlying"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[node name="GymItens" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.297302, -6.54063 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="HappyPlus" type="Area2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HappyPlus"]
position = Vector2( 8, -96 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HappyPlus"]
position = Vector2( 8, 120 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0.982806, 3.51883 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0.514234, -22.7936 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
hframes = 7
vframes = 4
frame = 1
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2"]
autoplay = "BirdFlying"
anims/BirdFlying = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="body_entered" from="HappyPlus" to="." method="_on_HappyPlus_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
